examples/invalid/comment-missing-owner/src/php/BrokenService.php
<?php

/**
 * @arch.node service broken-service
 * @arch.name Broken Service
 * @arch.domain orders
 */
final class BrokenService
{
}
